# gradslam

./: .buildinfo  .gitignore  .readthedocs.yml  ABLATION_RESULTS.md  BENCHMARK_RESULTS.md  DATASETS.md  Dockerfile  Makefile  README.md  REWRITE_PLAN.md  compose.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tutorials.html
.github/workflows/: ci.yml  docs.yml  publish.yml  wheel.yml
_modules/: index.html
_modules/gradslam/backend/: compile.html  device.html
_modules/gradslam/config/: cfgnode.html
_modules/gradslam/datasets/: datautils.html  icl.html  scannet.html  tum.html
_modules/gradslam/geometry/: projutils.html
_modules/gradslam/icp/: photometric_residual.html  projective.html  residuals.html  solvers.html
_modules/gradslam/mapping/: tsdf.html
_modules/gradslam/odometry/: base.html  gradicp.html  groundtruth.html  icp.html  icputils.html
_modules/gradslam/rendering/: tsdf_raycast.html
_modules/gradslam/slam/: fusionutils.html  icpslam.html  pointfusion.html
_sources/: index.rst.txt
_sources/modules/: backend.rst.txt  mapping.rst.txt
docs/: conf.py  fast_rgbd_benchmarks.md
docs/modules/: icp.rst  rendering.rst
gradslam/: __init__.py  version.py
gradslam/backend/: __init__.py  compile.py  device.py
gradslam/config/: cfgnode.py
gradslam/datasets/: __init__.py  icl.py  normalized.py  replica.py  scannet.py  scannet_simple.py  tum.py  tumutils.py
gradslam/evaluation/: __init__.py  trajectory.py
gradslam/geometry/: geometryutils.py  image_pyramid.py  knn.py  normals.py  se3utils.py
gradslam/icp/: __init__.py  photometric_residual.py  projective.py  residuals.py  solvers.py
gradslam/mapping/: __init__.py  tsdf.py
gradslam/odometry/: groundtruth.py  icputils.py
gradslam/rendering/: __init__.py  tsdf_raycast.py
gradslam/slam/: __init__.py  diagnostics.py  fusionutils.py  global_pose_graph.py  icpslam.py  keyframe_database.py  pipeline.py  pointfusion.py  pose_graph.py
gradslam/structures/: pointclouds.py  rgbdimages.py  structutils.py  utils.py
modules/: backend.html  config.html  datasets.html  geometry.html  icp.html  mapping.html  metrics.html  odometry.html  rendering.html  slam.html  structures.html  utils.html
scripts/: analyze_benchmark.py  benchmark_all.py  check_extract_status.py  check_rocm_stack.py  diagnose_tracking_motion.py  extract_realsense_bag.py  fast_finalize.py  finalize_and_run_slam.sh  finalize_extracted_dataset.py  run_all_tum.sh  run_slam.py  run_tum_slam.py  stop_extract_and_run_slam.sh  test_tum_slam.py  wait_and_run_slam.sh
scripts/ablation/: _bi_oracle_test.py  analyze.py  results_archive.csv  run_one.sh  run_sweep.sh  shardA.txt  shardB.txt  shardC.txt  shardD.txt  shardE_validate.txt
tests/: test_no_open3d_import.py
tests/datasets/: test_datautils.py  test_normalized.py  test_tum_tracking_pairs.py
tests/geometry/: test_image_pyramid.py  test_normals.py  test_se3.py
tests/icp/: test_compile_icp.py  test_photometric_residual.py  test_projective_icp_identity.py  test_projective_icp_known_transform.py  test_projective_icp_pyramid_K.py  test_solvers.py
tests/mapping/: test_tsdf_integrate.py
tests/odometry/: test_icputils.py
tests/packaging/: test_version.py
tests/rendering/: test_tsdf_raycast.py
tests/slam/: test_diagnostics.py  test_fusionutils.py  test_global_pose_graph.py  test_loop_closure.py  test_pipeline_two_frames.py  test_pose_graph_optimize.py  test_quality_score_penalizes_disagreement.py  test_relocalization.py  test_scale_veto.py  test_se3_log.py
tests/structures/: test_pointclouds.py
tutorials/: pointclouds_tutorial.html  rgbdimages_tutorial.html  tutorial_prerequisits.html
(+3 files in other folders)
