[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradslam"
version = "0.2.0"
description = "Modernized PyTorch/ROCm differentiable RGB-D SLAM building blocks"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Montreal Robotics Lab", email = "gradslam@robotics.cs.mcgill.ca" }
]
dependencies = [
    "numpy>=1.26",
    "kornia>=0.8.3",
    "imageio>=2.34",
    "opencv-python-headless>=4.10",
    "plotly>=5.20",
    "pyyaml>=6.0",
    "natsort>=8.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
optim = ["pypose>=0.9.5"]
mesh = ["scikit-image>=0.23", "trimesh>=4.0"]
vis = ["matplotlib>=3.8", "plotly>=5.20", "open3d"]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=2.0", "nbsphinx>=0.9.3"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools]
packages = ["gradslam"]

[tool.setuptools.package-data]
gradslam = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
