[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opengradslam"
version = "0.2.0"
description = "Modernized PyTorch/ROCm differentiable RGB-D SLAM building blocks"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Montreal Robotics Lab", email = "gradslam@robotics.cs.mcgill.ca" }
]
maintainers = [
    { name = "Bjoern Ellensohn", email = "bjoern.ellensohn@unileoben.ac.at" }
]
keywords = [
    "slam",
    "rgb-d",
    "icp",
    "rocm",
    "pytorch",
    "computer-vision",
    "robotics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.26",
    "kornia>=0.8.3",
    "imageio>=2.34",
    "opencv-python-headless>=4.10",
    "plotly>=5.20",
    "pyyaml>=6.0",
    "natsort>=8.4",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/bjoernellens1/gradslam"
Repository = "https://github.com/bjoernellens1/gradslam"
Issues = "https://github.com/bjoernellens1/gradslam/issues"
Documentation = "https://bjoernellens1.github.io/gradslam/"

[project.optional-dependencies]
optim = ["pypose>=0.9.5"]
mesh = ["scikit-image>=0.23", "trimesh>=4.0"]
vis = ["matplotlib>=3.8", "plotly>=5.20"]
open3d = ["open3d>=0.19"]
realsense = ["pyrealsense2>=2.57"]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=2.0", "nbsphinx>=0.9.3", "ipython>=8.0"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
    "check-wheel-contents>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gradslam*"]
exclude = ["tests*", "docs*", "examples*", "scripts*"]
namespaces = false

[tool.setuptools.package-data]
gradslam = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
